--- a/play-data/pom.xml
+++ b/play-data/pom.xml
@@ -31,13 +31,23 @@
         </dependency>
 
         <dependency>
-            <groupId>org.binave.util</groupId>
-            <artifactId>common-util</artifactId>
+            <groupId>org.binave.play</groupId>
+            <artifactId>play-api</artifactId>
             <version>0.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.binave.play</groupId>
-            <artifactId>play-api</artifactId>
+            <groupId>org.binave.common</groupId>
+            <artifactId>collect</artifactId>
+            <version>0.1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.binave.common</groupId>
+            <artifactId>serialize</artifactId>
+            <version>0.1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.binave.common</groupId>
+            <artifactId>util</artifactId>
             <version>0.1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
