--- a/play-config/pom.xml
+++ b/play-config/pom.xml
@@ -9,12 +9,12 @@
     <dependencies>
         <dependency>
             <groupId>org.binave.common</groupId>
-            <artifactId>collect</artifactId>
+            <artifactId>common-collect</artifactId>
             <version>0.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.binave.common</groupId>
-            <artifactId>util</artifactId>
+            <artifactId>common-util</artifactId>
             <version>0.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
