--- a/play-data/pom.xml
+++ b/play-data/pom.xml
@@ -39,17 +39,17 @@
         </dependency>
         <dependency>
             <groupId>org.binave.common</groupId>
-            <artifactId>collect</artifactId>
+            <artifactId>common-collect</artifactId>
             <version>0.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.binave.common</groupId>
-            <artifactId>serialize</artifactId>
+            <artifactId>common-serialize</artifactId>
             <version>0.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.binave.common</groupId>
-            <artifactId>util</artifactId>
+            <artifactId>common-util</artifactId>
             <version>0.1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
