--- a/play-config/pom.xml
+++ b/play-config/pom.xml
@@ -27,6 +27,12 @@
             <artifactId>play-api</artifactId>
             <version>0.1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <!-- for slf4j, lombok and hibernate jpa -->
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+        </dependency>
     </dependencies>
 
     <properties>
