--- a/play-config/pom.xml
+++ b/play-config/pom.xml
@@ -23,6 +23,11 @@
             <version>2.8.5</version>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.10.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.binave.play</groupId>
             <artifactId>play-api</artifactId>
             <version>0.1.0-SNAPSHOT</version>
