--- a/play-async-route/pom.xml
+++ b/play-async-route/pom.xml
@@ -2,8 +2,8 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.binave.play</groupId>
-    <artifactId>play-async-route</artifactId>
+    <groupId>org.binave.web</groupId>
+    <artifactId>web-async-route</artifactId>
     <version>0.1.0-SNAPSHOT</version>
 
     <properties>
@@ -12,7 +12,7 @@
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
         <maven.build.timestamp.format>yyMMdd_hhmmss</maven.build.timestamp.format>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <io.vertx.version>3.9.2</io.vertx.version>
+        <io.vertx.version>4.0.0-milestone5</io.vertx.version>
     </properties>
 
     <dependencies>
@@ -41,11 +41,13 @@
             <artifactId>vertx-web</artifactId>
             <version>${io.vertx.version}</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-sync</artifactId>
             <version>${io.vertx.version}</version>
         </dependency>
+        -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -55,7 +57,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
